--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIREシミュレーション</title>
+    <title>SIM</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
@@ -105,7 +105,7 @@
 </head>
 <body>
 
-    <h1>FIREシミュレーション</h1>
+    <h1>SIM</h1>
 
     <div class="container">
         <div class="form-container">
@@ -127,7 +127,7 @@
                 <input type="number" id="monthly-contribution-pre" value="30"><span class="unit">万円</span>
             </div>
             <div class="form-group">
-                <label>退職年齢</label>
+                <label>REST_FIRST</label>
                 <div class="age-input">
                     <input type="number" id="retirement-age-year" value="40"><span class="unit">歳</span>
                     <input type="number" id="retirement-age-month" value="6"><span class="unit">ヶ月</span>
@@ -356,4 +356,5 @@
 </script>
 
 </body>
+
 </html>
