--- a/index.html
+++ b/index.html
@@ -2,11 +2,76 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>File List</title>
+<title>Files</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body {
+  margin: 0;
+  background: #0d1117;
+  color: #c9d1d9;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+}
+
+header {
+  text-align: center;
+  padding: 40px 0 10px;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 0;
+  color: #58a6ff;
+}
+
+#file-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 30px;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.card {
+  background: #161b22;
+  border: 1px solid #30363d;
+  padding: 18px;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.card:hover {
+  background: #1f2630;
+  transform: translateY(-5px);
+  border-color: #58a6ff;
+}
+
+.card a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+}
+
+.fadein {
+  opacity: 0;
+  animation: fadein 0.7s forwards;
+}
+
+@keyframes fadein {
+  to { opacity: 1; }
+}
+</style>
 </head>
+
 <body>
-<h1>File List</h1>
-<ul id="file-list"></ul>
+<header>
+  <h1>File List</h1>
+</header>
+
+<div id="file-list"></div>
 
 <script>
 const owner = "nonemu0601";
@@ -22,12 +87,15 @@ fetch(api)
 
     files.forEach(f => {
       if (f.type === "file") {
-        const li = document.createElement("li");
+        const div = document.createElement("div");
+        div.className = "card fadein";
+
         const a = document.createElement("a");
         a.href = f.name;
         a.textContent = f.name;
-        li.appendChild(a);
-        list.appendChild(li);
+
+        div.appendChild(a);
+        list.appendChild(div);
       }
     });
   });
